kafka--consumer-exemplo/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
  namespace: consumer
  labels:
    app: consumer-deployment
spec:
  selector:
    matchLabels:
      app: consumer-deployment
  template:
    metadata:
      labels:
        app: consumer-deployment
    spec:
      containers:
        - name: consumer-deployment
          image: localhost:32000/consumer-teste:1.1.0
          readinessProbe:
            httpGet:
              path: actuator/health
              port: 9090
            initialDelaySeconds: 60
            periodSeconds: 3
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: actuator/health
              port: 9090
            initialDelaySeconds: 60
            periodSeconds: 3
            timeoutSeconds: 2
          resources:
            requests:
              memory: "250Mi"
              cpu: "200m"
            limits:
              memory: "250Mi"
              cpu: "200m"
          ports:
            - containerPort: 5000
