kafka--consumer-exemplo/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
  namespace: consumer
spec:
  type: ClusterIP
  selector:
    app: consumer-deployment
  ports:
    - port: 5000
      name: default-port-application
      protocol: TCP
      targetPort: 5000
