kafka--consumer-exemplo/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consumer-ingress
  namespace: consumer
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consumer-service
                port:
                  number: 5001
